modificacion de cables a bodega (SCRUD en proceso)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "antihurto",
         "controntrolador",
         "milisegundos",
-        "SCRUD"
+        "SCRUD",
+        "telegestión"
     ]
 }
