scrud materiales terminado.
A TERMINAR: (boton para restar material y alerta de material abajo de mínimo)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "antihurto",
         "controntrolador",
         "milisegundos",
+        "resetear",
         "SCRUD",
         "telegestión"
     ]
